--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "amap-latlong",
-    "description": "description...",
+    "name": "binbin8730/amap-latlong",
+    "description": "laravel-admin 高德经纬度选择器/Latitude and longitude selector",
     "type": "library",
     "keywords": [
         "laravel-admin",
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "encore/laravel-admin": "~1.6"
+        "encore/laravel-admin": "~1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
